src/objects/sked_Health__c.object
<CustomObject>
    <fields>
        <fullName>sked_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Healths</relationshipLabel>
        <relationshipName>sked_Healths</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sked_EHR_Immunization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EHR Immunization</label>
        <referenceTo>HealthCloudGA__EhrImmunization__c</referenceTo>
        <relationshipLabel>Healths</relationshipLabel>
        <relationshipName>sked_Healths</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked_Support_Plan__c</fullName>
        <label>Support Plan</label>
        <referenceTo>sked_Support_Plan__c</referenceTo>
        <relationshipLabel>Healths</relationshipLabel>
        <relationshipName>sked_Healths</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sked_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bodymap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Health</label>
    <nameField>
        <displayFormat>HN-{000000}</displayFormat>
        <label>Health Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Healths</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>